--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "vue-first-app",
+  "appName": "ionic-vue-jsonplaceholder",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "dist",
