--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "vue-first-app",
+  "name": "ionic-vue-placeholder",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve-dev": "ionic serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -20,16 +19,12 @@
   "devDependencies": {
     "@capacitor/cli": "2.4.7",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0-0",
-    "@vue/test-utils": "^2.0.0-0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "vue-jest": "^5.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0"
   },
   "description": "An Ionic project"
 }
