--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "start": "vue-cli-service serve",
     "serve-dev": "ionic serve",
     "build": "vue-cli-service build",
+    "start": "yarn build && yarn serve",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
