--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/android": "2.4.7",
     "@capacitor/core": "2.4.7",
     "@capacitor/ios": "2.4.7",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "@vue/cli-service": "^4.5.12",
