--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@ionic/vue-router": "^5.4.0",
     "@vue/cli-service": "^4.5.12",
     "core-js": "^3.6.5",
+    "firebase": "^8.3.2",
     "uuid": "^8.3.2",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0",
-    "vuex-persist": "^3.1.3"
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.7",
